--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <img src="assets/nerve-profilepic.jpg" alt="Profile Picture" class="profile-pic">
-        <h1 class="name">Luis Sanchez</h1>
+        <h1 class="name">Luis Buenrostro</h1>
         <p class="subtext">Software Engineer</p>
         <div class="projects-buttons">
             <button class="project-btn" data-preview="A MERN stack web application with authentication, REST API, and responsive UI.">Full Stack Web App</button>
