--- a/index.html
+++ b/index.html
@@ -11,12 +11,16 @@
         <img src="assets/nerve-profilepic.jpg" alt="Profile Picture" class="profile-pic">
         <h1 class="name">Luis Buenrostro</h1>
         <p class="subtext">Software Engineer</p>
+
         <div class="projects-buttons">
-            <button class="project-btn" data-preview="A MERN stack web application with authentication, REST API, and responsive UI.">Full Stack Web App</button>
-            <button class="project-btn" data-preview="A live, production-ready website built with modern web technologies.">Live Website</button>
-            <button class="project-btn" data-preview="A C++ lexer and parser for custom language syntax analysis.">Lexer Parser C++</button>
+            <h2>My Projects:</h2>
+            <button id="project1" class="project-btn" data-preview="A MERN stack web application with authentication, REST API, and responsive UI.">School Club Website</button>
+            <button id="project2" class="project-btn" data-preview="A live, production-ready website built with modern web technologies.">Realtime Weather App</button>
+            <button id="project3" class="project-btn" data-preview="A C++ lexer and parser for custom language syntax analysis.">Roommatey</button>
         </div>
         <div id="project-preview" class="project-preview"></div>
+
+        <h3 class="social-text">Connect with me:</h3>
         <div class="social-buttons">
             <a href="https://www.linkedin.com/in/luisbuenrostro/" target="_blank" class="social-btn linkedin" aria-label="LinkedIn">
                 <svg width="28" height="28" viewBox="0 0 24 24" fill="none">
@@ -28,6 +32,12 @@
                 <svg width="28" height="28" viewBox="0 0 24 24" fill="none">
                     <circle cx="12" cy="12" r="12" fill="#181717"/>
                     <path d="M12 6.5c-2.9 0-5.3 2.4-5.3 5.3 0 2.3 1.5 4.2 3.6 4.9.3.1.4-.1.4-.3v-1.1c-1.5.3-1.8-.7-1.8-.7-.3-.7-.7-.9-.7-.9-.6-.4 0-.4 0-.4.7.1 1 .7 1 .7.6 1 1.6.7 2 .5.1-.4.2-.7.4-.8-1.2-.1-2.5-.6-2.5-2.7 0-.6.2-1.1.6-1.5-.1-.2-.3-.8.1-1.6 0 0 .5-.2 1.6.6.5-.1 1-.2 1.5-.2s1 .1 1.5.2c1.1-.8 1.6-.6 1.6-.6.4.8.2 1.4.1 1.6.4.4.6.9.6 1.5 0 2.1-1.3 2.6-2.5 2.7.2.2.4.5.4 1v1.5c0 .2.1.4.4.3 2.1-.7 3.6-2.6 3.6-4.9 0-2.9-2.4-5.3-5.3-5.3z" fill="#fff"/>
+                </svg>
+            </a>
+            <a href="assets/LuisBuenrostro%20-%20Resume.pdf" target="_blank" class="social-btn resume" aria-label="Resume">
+                <svg width="28" height="28" viewBox="0 0 24 24" fill="none">
+                    <circle cx="12" cy="12" r="12" fill="#A40606"/>
+                    <path d="M6 2h7l5 5v15a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2zM13 3.5V8h4.5L13 3.5zM8 10h8v1H8v-1zm0 3h8v1H8v-1zm0 3h5v1H8v-1z" fill="#fff"/>
                 </svg>
             </a>
         </div>
